# Bytestream

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  meson.build  notes.txt
client/: CMakeLists.txt  assets.c  assets.h  client.c  client.h  coordinates.c  coordinates.h  meson.build  settings.ini
common/: CMakeLists.txt  common.h  config.h  coordinates.c  coordinates.h  logging.c  logging.h  mem.c  mem.h  rand.c  rand.h
lib/: CMakeLists.txt  meson.build  sds.c  sds.h  sdsalloc.h  standard.h
lib/util/: log.c  log.h  rand.c  rand.h
lib/util/isaac/: isaac64.c  isaac64.h
